[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/hero/Traps/Fire/On (16x32).png" type="Texture" id=1]
[ext_resource path="res://assets/hero/Traps/Fire/Off.png" type="Texture" id=2]
[ext_resource path="res://scripts/FireTrap.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 7.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "off"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "on"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.0
height = 6.0

[node name="FireTrap" type="StaticBody2D"]
collision_layer = 16

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8.5 )
shape = SubResource( 1 )

[node name="fire" type="Area2D" parent="."]
collision_layer = 16
script = ExtResource( 3 )

[node name="texture" type="Sprite" parent="fire"]
texture = ExtResource( 2 )

[node name="animation" type="AnimationPlayer" parent="fire"]
autoplay = "off"
anims/RESET = SubResource( 2 )
anims/off = SubResource( 3 )
anims/on = SubResource( 4 )

[node name="collision_fire" type="CollisionShape2D" parent="fire"]
position = Vector2( 0, -7 )
shape = SubResource( 5 )
disabled = true

[node name="start_timer" type="Timer" parent="fire"]
wait_time = 3.0
autostart = true

[node name="stop_timer" type="Timer" parent="fire"]
wait_time = 6.0
autostart = true

[connection signal="body_entered" from="fire" to="fire" method="_on_fire_body_entered"]
[connection signal="timeout" from="fire/start_timer" to="fire" method="_on_start_timer_timeout"]
[connection signal="timeout" from="fire/stop_timer" to="fire" method="_on_stop_timer_timeout"]
